--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -47,6 +47,7 @@ header
 }
 .login form
 {
+    transition: all 500ms ease;
     position: absolute;
     left: 50%;
     bottom: 30px;
@@ -54,7 +55,7 @@ header
     backdrop-filter: blur(7px);
     background: #ffffff20;
     width: 500px;
-    height: 550px;
+    min-height: 550px;
     color: white;
     text-align: center;
     padding: 2em;
@@ -63,7 +64,7 @@ form p.heading{
     font-size: 24px;
     letter-spacing: 0.1em;
     text-transform: uppercase;
-    margin: 1em auto;
+    margin-bottom: 1em;
 }
 form input, form button
 {
@@ -81,10 +82,12 @@ form input, form button
     padding: 1em;
     border: none;
     transition: all 300ms ease;
+    border: 2px solid transparent;
 }
 form input:focus
 {
     background: #ffffff50;
+    border-color: white;
 }
 form button 
 {
@@ -96,6 +99,78 @@ form button
     font-family: 'DM Serif Text', serif;
     margin: 20px 0 ;
 }
+
+.loaderContainer
+{
+    display: flex;
+}
+
+@keyframes dotAnimation1 {
+    0%{
+        transform: translateX(0px) scale(1);
+        opacity: 0.3;
+    }
+    50%{
+        transform: translateX(-10px) scale(1.2);
+        opacity: 1;
+    }    
+    100%{
+        transform: translateX(0px) scale(1);
+        opacity: 0.3;
+    }
+}
+
+@keyframes dotAnimation2 {
+    0%{
+        transform: translateX(0px) scale(1);
+        opacity: 0.3;
+    }
+    50%{
+        transform: scale(1.2);
+        opacity: 1;
+    }    
+    100%{
+        transform: scale(1);
+        opacity: 0.3;
+    }
+}
+
+@keyframes dotAnimation3 {
+    0%{
+        transform: translateX(0px) scale(1);
+        opacity: 0.3;
+    }
+    50%{
+        transform: translateX(10px) scale(1.2);
+        opacity: 1;
+    }    
+    100%{
+        transform: translateX(0px) scale(1);
+        opacity: 0.3;
+    }
+}
+
+.dot{
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: white;
+    margin: 0 5px;
+    opacity: 0.3;
+}
+.dot:nth-of-type(1){
+    animation: dotAnimation1 1.2s infinite ease-out;
+}
+.dot:nth-of-type(2){
+    animation: dotAnimation2 infinite 1.2s ease-out;
+    animation-delay: 0.4s;
+}
+.dot:nth-of-type(3)
+{
+    animation: dotAnimation3 1.2s infinite ease-out;
+    animation-delay: 0.8s;
+}
+
 .container{width: 70%}
 .mx-auto{margin: 0 auto;}
-
+.error{color: tomato}
