--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -7,6 +7,11 @@ header
     width: 100%;
     z-index: 1;
 }
+header > div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 .multichatLogo
 {
     font-size: 2.5em;
@@ -176,3 +181,15 @@ form button
 .mx-auto{margin: 0 auto;}
 .error{color: tomato}
 .pointer{cursor: pointer;}
+
+
+.chat{
+    background: black;
+    color: white;
+}
+.chatArea
+{
+    padding-top: 100px;
+    position: sticky;
+    top: 100px;
+}
