--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -6,6 +6,7 @@ header
     position: fixed;
     width: 100%;
     z-index: 1;
+    backdrop-filter: blur(100px);
 }
 header > div {
     display: flex;
@@ -71,7 +72,7 @@ form p.heading{
     text-transform: uppercase;
     margin-bottom: 1em;
 }
-form input, form button
+form input, .login form button
 {
     display: flex;
     align-items: center;
@@ -94,7 +95,7 @@ form input:focus
     background: #ffffff50;
     border-color: white;
 }
-form button 
+.login form button 
 {
     background: #2b72c5;
     text-transform: uppercase;
@@ -190,6 +191,85 @@ form button
 .chatArea
 {
     padding-top: 100px;
-    position: sticky;
-    top: 100px;
+    padding-bottom: 100px;
+    display: flex;
+    flex-direction: column;
+    max-height: 100vh;
+    overflow: scroll;
+    scroll-behavior: smooth;
+}
+.chatMessage
+{
+    width: fit-content;
+    align-self: flex-end;
+    margin: 10px 0;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: flex-end;
+    max-width: 50%;
+}
+.chatMessage p{
+    padding: 1em;
+    background: blue;
+    margin: 0 10px;
+    border-radius: 20px;
+    border-bottom-right-radius: 2px;
+    letter-spacing: 0.07em;
+}
+
+.chatMessage.notSelf
+{
+    align-self: flex-start;
+    color: black;
+    flex-direction: row;
+}
+.chatMessage.notSelf p {
+    background: lightgray;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 2px;
+}
+
+.chatMessage img,
+.imageLetter
+{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+.imageLetter{
+    background: blueviolet;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    color: white;
+    text-transform: uppercase;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+input{
+    background: white
+}
+.logoutButton, .chatForm button
+{
+    background: none;
+    appearance: none;
+    border: none;
+    color: white;
+    margin-right: 50px;
+    font-family: 'DM Text Serif';
+    font-size: 20px;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+.chatForm
+{
+    display: flex;
+    position: fixed;
+    bottom: 0px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: black;
+}
+.chatForm input{
+    width: 85%;
 }
