--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -281,6 +281,10 @@ input{
 }
 
 @media screen and (max-width: 767px) {
+    header.small{
+        background: black;
+        height: 70px;
+    }
     .container{
         width: 90%
     }
